--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ URI     : https://colorlib.com
     <div class="section light-bg">
 
         <div class="container">
-            <h3>Easy, Simple, and Quick.</h3>
+            <h3>Adding a Climb is Easy, Simple, and Quick.</h3>
             <div class="row">
                 <div class="col-md-8 d-flex align-items-center animated wow fadeInLeft" data-wow-duration="1.7s" data-wow-delay="0.5s">
                     <ul class="list-unstyled ui-steps">
@@ -375,7 +375,7 @@ URI     : https://colorlib.com
             <div class="row pt-4">
                 <div class="col-md-6">
                     <h4 class="mb-3">As a gym, what do I have to do to integrate this into our system?</h4>
-                    <p class="light-font mb-5">Absolutely, nothing. Well sort of. Our app is a standalone web application. All that has to be done is the creatation of your server on our end. For you, you just have to dedicate a little bit more to your members by logging the climbs you put up. </p>
+                    <p class="light-font mb-5">Absolutely, nothing. Well sort of. Our app is a standalone web application. All that has to be done is the creation of your gym's server on our end. For you, you just have to dedicate a little bit more to your members by logging the climbs you put up. </p>
                     <h4 class="mb-3">Do I have to have an account to use this app?</h4>
                     <p class="light-font mb-5">Nope! You can access the database, browse climbs, and see beta without an account. We envision this app to be used by both gym members and guests. However, you'll be missing out on a few key features like checking in with your phone and the ability to tick and save climbs! </p>
 
@@ -384,7 +384,7 @@ URI     : https://colorlib.com
                     <h4 class="mb-3">Do I have to download anything?</h4>
                     <p class="light-font mb-5">BetaBoulders App is all web. You can access it on your browser (phone or desktop) and use all the features, so there's no download needed. You can also choose to save it to your homepage as our app is a Progressive Web Application. By doing so, it will be treated and act like an app you downloaded. </p>
                     <h4 class="mb-3">Isn't this considered cheating? Doesn't this ruin the fun of climbing?</h4>
-                    <p class="light-font mb-5">We don't know what's fun about being stuck and frustrated on a climb. We also don't think people should kill themselves over a climb either with constant attempts. Of course, we built this tool so that it could be used as a last resort or for the curious climber. We want climbers to get better too by seeing great technique straight from the route setter. </p>
+                    <p class="light-font mb-5">We don't know what's fun about being stuck and frustrated on a climb. We also don't think people should kill themselves over a climb with constant attempts. Of course, we built this tool so that it could be used as a last resort or for the curious climber. We want climbers to get better too by seeing great technique straight from the route setter. It's good to copy as practice in this case!</p>
 
                 </div>
             </div>
