--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ URI     : https://colorlib.com
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="βouldersapp™">
     <meta name="keywords" content="climbing, gym, rock, beta, indoor">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
     <!-- Font -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
