--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
 <!doctype html>
 <html lang="en">
-<!--
-
-Page    : index / MobApp
-Version : 1.0
-Author  : Colorlib
-URI     : https://colorlib.com
-
- -->
 
 <head>
     <title>βouldersapp™</title>
@@ -61,10 +53,10 @@ URI     : https://colorlib.com
 
 
     <header class="bg-top" id="home">
-        <div class="img-holder mt-5 pt-5"><img src="images/iphonex.png" alt="phone" class="img-fluid pt-5 animated fadeInUp wow" data-wow-duration="1s" data-wow-delay="0.1s"></div>
+        <div class="img-holder mt-sm-5 pt-sm-5"><img src="images/iphonex.png" alt="phone" class="img-fluid pt-sm-5 animated fadeInUp wow" data-wow-duration="1s" data-wow-delay="0.1s"></div>
     </header>
 
-    <div class="client-logos my-5">
+    <div class="client-logos my-5 bg-white">
         <div class="container text-center">
             <img src="images/client-logos.png" alt="client logos" class="img-fluid">
         </div>
@@ -93,7 +85,7 @@ URI     : https://colorlib.com
                                 <span class="ti-download gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">No Downloads</h4>
-                                    <p class="card-text">This is a web app accessible by anyone with internet. Just type a participating gym's name and betabouldersapp or scan a tag. <br/>ex. yourgym.betaboulders.com</p>
+                                    <p class="card-text">This is a web app accessible by anyone with internet. Just type a participating gym's name and betabouldersapp or scan a tag. <br/> yourgym.betabouldersapp.com</p>
                                 </div>
                             </div>
                         </div>
@@ -106,7 +98,7 @@ URI     : https://colorlib.com
                                 <span class="ti-face-smile gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">Instant Gratification</h4>
-                                    <p class="card-text">Don't wait around for beta from someone else. See it straight from the mastermind who came up with it. Don't want video? Get annotated climbs for that crux your stuck on. </p>
+                                    <p class="card-text">Don't wait around for beta from someone else. See it straight from the mastermind who came up with it. Don't want video? Get annotated climbs for that crux you're stuck on. </p>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +132,7 @@ URI     : https://colorlib.com
                 <div class="col-lg-6 offset-lg-6 animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.5s">
                     <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                     <h2>It's Not Just a Concept.</h2>
-                    <p class="mb-4">We already have a working app deployed. Use it to check into your climbing gym and start creating and ticking climbs.</p>
+                    <p class="mb-4">We have a working app deployed. Use it to check into your climbing gym and start creating and ticking climbs!</p>
                     <a href="https://touchstone.betabouldersapp.com" class="btn btn-primary">Check it Out!</a>
                 </div>
             </div>
@@ -180,7 +172,6 @@ URI     : https://colorlib.com
                         <img src="images/betatag.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
                             <h2>The Power of the βTag™</h2>
-                            <img src="images/combetatag.png" alt="graphic" class="float-right mb-2">
                             <p class="lead">Organization is the problem and our tags are the solution. </p>
                             <p>You can print the βTag™ directly from a climb's page so that you can physically attach it to your climb. Along with route information, it is marked with handy indicators for color, danger, and what's considered on the route.
                             </p>
@@ -210,7 +201,7 @@ URI     : https://colorlib.com
                         <div>
                             <h2>Technology</h2>
                             <p class="lead">Leveraging Cloud computing and storage for climbing </p>
-                            <p>The climb is no longer dead when it is removed. You can refer back to it whenever no matter who you are because it persists in our database. Want to remember that gnarly V8 you did months ago? Now you can as a climber. What if you're a routesetter looking to set at a new place? You can use our api as a reference and portfolio to show off too!
+                            <p>The climb is no longer dead and gone when it is removed and replaced in the gym. You can refer back to it whenever because it persists in our database. Want to remember that gnarly V8 you did months ago? Now you can as a climber. What if you're a routesetter looking to set at a new place? You can use our api as a reference and portfolio to show off your best work too! What if you have no idea what to make next? Browse past climbs and get fun ideas for your route.
                             </p>
 
                         </div>
@@ -221,12 +212,12 @@ URI     : https://colorlib.com
                         <div>
 
                             <h2>Using Data to Your Advantage</h2>
-                            <p class="lead">The data we collect is to build better climbs and make happier members.</p>
-                            <p>Every climb has a star rating system from 1-5 and are graded by the climbers. You can see what they like, how well your routesetters are setting, and what kinds of climbs to set next using this information.
+                            <p class="lead">The data we collect goes a long way towards to building better climbs and making happier members.</p>
+                            <p>Every climb has a star rating system from 1-5 and are graded by the climbers. You can see what climbers like, how well the routesetters are setting, and what kinds of climbs to set next using this information.
                             </p>
-                            <p> Additionally, get the demographics of both your climbers and climbs, and organize your routes and see the distribution of grades and types of climbs. All this so you can make better decisions in the interest of your members and business.
+                            <p> Additionally, get the demographics of both your climbers and climbs, and organize your routes and see the distribution of grades and types of climbs. All this so you can make better decisions in the interest of your climbers and business.
                             </p>
-                            <p> Do you do member climbing competitions? If you do, you can ditch the scorecards and forget about getting volunteers to tally points. Climbers can use the tick feature of our app to tally points in realtime for maximum competitiveness. Just create a new climb under competition mode.
+                            <p> Do you do member climbing competitions? If you do, you can ditch the scorecards and forget about getting volunteers to tally up points. Climbers can use the tick feature of our app to tally points in realtime for maximum competitiveness. Just create a new climb under competition mode.
                             </p>
                             <img src="images/dashboard.png" alt="graphic" class="img-fluid mt-2">
                         </div>
@@ -250,7 +241,7 @@ URI     : https://colorlib.com
                 <div class="col-md-6 d-flex align-items-center animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.5s">
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
-                        <h2>Beta Videos Directly in Climber's Hands</h2>
+                        <h2>Beta Videos Directly in the Climber's Hands</h2>
                         <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution to a climb you're stuck on. Watch it conveniently and seamlessly by scanning the βTag™. </p>
                         <a href="https://touchstone.betabouldersapp.com/about" class="btn btn-primary">Read more</a></div>
                 </div>
@@ -377,7 +368,7 @@ URI     : https://colorlib.com
             <div class="row pt-4">
                 <div class="col-md-6">
                     <h4 class="mb-3">As a gym, what do I have to do to integrate this into our system?</h4>
-                    <p class="light-font mb-5">Absolutely, nothing. Well sort of. Our app is a standalone web application. All that has to be done is the creation of your gym's server on our end. For you, you just have to dedicate a little bit more to your members by logging the climbs you put up. </p>
+                    <p class="light-font mb-5">Absolutely nothing. Well sort of. Our app is a standalone web application. All that has to be done is the creation of your gym's server on our end. For you, you just have to dedicate a little bit more to your members by logging the climbs you put up. </p>
                     <h4 class="mb-3">Do I have to have an account to use this app?</h4>
                     <p class="light-font mb-5">Nope! You can access the database, browse climbs, and see beta without an account. We envision this app to be used by both gym members and guests. However, you'll be missing out on a few key features like checking in with your phone and the ability to tick and save climbs! </p>
 
@@ -386,7 +377,7 @@ URI     : https://colorlib.com
                     <h4 class="mb-3">Do I have to download anything?</h4>
                     <p class="light-font mb-5">BetaBoulders App is all web. You can access it on your browser (phone or desktop) and use all the features, so there's no download needed. You can also choose to save it to your homepage as our app is a Progressive Web Application. By doing so, it will be treated and act like an app you downloaded. </p>
                     <h4 class="mb-3">Isn't this considered cheating? Doesn't this ruin the fun of climbing?</h4>
-                    <p class="light-font mb-5">We don't know what's fun about being stuck and frustrated on a climb. We also don't think people should kill themselves over a climb with constant attempts. Of course, we built this tool so that it could be used as a last resort or for the curious climber. We want climbers to get better too by seeing great technique straight from the route setter. It's good to copy as practice in this case!</p>
+                    <p class="light-font mb-5">We don't know what's fun about being stuck and frustrated on a climb. We also don't think people should kill themselves over a climb with constant attempts. Of course, we built this tool so that it could be used as a last resort or for the curious climber. At the core, we want climbers to get better by seeing great technique straight from the route setter. It's good to copy as practice!</p>
 
                 </div>
             </div>
@@ -409,7 +400,7 @@ URI     : https://colorlib.com
                     <button class="btn btn-light"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-width: 120px"></button>
 
                 </div>
-                <p class="text-primary"><small><i>*Works on all browsers including, Safari, Chrome, Firefox, and Edge. </i></small></p>
+                <p class="text-primary"><small><i>*Tested and working on all browsers including, Safari, Chrome, Firefox, and Edge. </i></small></p>
             </div>
         </div>
 
@@ -423,7 +414,7 @@ URI     : https://colorlib.com
                     <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Los Angeles, CA</p>
                     <div class=" d-block d-sm-inline-block">
                         <p class="mb-2">
-                            <span class="ti-email mr-2"></span> <a class="mr-4" href="mailto:davidlac.web@gmail.com">support@betabouldersapp.com</a>
+                            <span class="ti-email mr-2"></span> <a class="mr-4" href="mailto:davidlac.web@gmail.com">info@betabouldersapp.com</a>
                         </p>
                     </div>
                     <div class="d-block d-sm-inline-block">
