sharper images and optimzations

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             <div class="circle-icon mr-4">2</div>
                             <div class="media-body">
                                 <h5>Add a Climb in under 15 seconds</h5>
-                                <p>Enter a new climb within seconds. Literally a 3 step form to gather an image and enter some basic info.</p>
+                                <p>Enter a new climb within seconds. Literally a 3 step form to gather an image and selecting some basic info.</p>
                             </div>
                         </li>
                         <li class="media">
@@ -315,12 +315,12 @@
                     <h5 class="mt-4 mb-2">Matthew Yeomans</h5>
                     <p class="text-primary">Gym Manager, The Factory Bouldering</p>
                 </div>
-                <div class="testimonials-single">
+<!--                 <div class="testimonials-single">
                     <img src="images/jenna.png" alt="client" class="client-img">
                     <blockquote class="blockquote">I took a look at the app, it's a cool idea!</blockquote>
                     <h5 class="mt-4 mb-2">Jenna Tholcke</h5>
                     <p class="text-primary">Director of Operations, Hangar18 Climbing</p>
-                </div>
+                </div> -->
             </div>
 
         </div>
