--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div class="tab-pane fade" id="schedule">
-                    <div class="d-flex flex-column flex-lg-row">
+                    <div class="d-flex flex-column flex-md-row">
                         <div>
                             <h2>Scanning Initiated</h2>
                             <p class="lead">Our system and app revolves around the idea of scanning to get lots of information. </p>
@@ -192,7 +192,7 @@
                             <p> While your modern phone probably has a built-in QR code scanner (iOS 11, Pixel 2, Samsung S8, etc.), we also have our own blazing fast continous QR scanner. With our app's QR Scanner, you can scan routes you did to be ticked and saved to your account. Check out your account's dashboard to check your stats and saved climbs.
                             </p>
                         </div>
-                        <img src="images/gallery/4.jpg" alt="graphic" class="img-fluid rounded align-self-start mr-lg-3 mb-5 mb-lg-0 ml-3 col-4">
+                        <img src="images/gallery/4.jpg" alt="graphic" class="img-fluid rounded align-self-start mr-lg-3 mb-5 mb-lg-0 col-md-4">
                     </div>
                 </div>
                 <div class="tab-pane fade" id="messages">
