--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="section-title">
         <div class="container">
             <h1 class="animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.0s">Get (beta) Sprayed. 💦</h1>
-            <p class="tagline">The one and only app a rock climbing gym needs. Give your members the beta to your bouldering routes and build a community along the way.</p>
+            <p class="tagline">The one and only app a rock climbing gym needs. Give climbers the beta to your bouldering routes and build a community along the way.</p>
         </div>
 <!--                 <small>HIGHLIGHTS</small>
                 <h3>Features you love</h3> -->
@@ -189,7 +189,7 @@
                             <p class="lead">Our system and app revolves around the idea of scanning to get lots of information. </p>
                             <p>In case you haven't noticed, QR codes are finally becoming widespread. With phone cameras getting better and better, scanning a QR code is a walk in the park.
                             </p>
-                            <p> While your modern phone probably has a built-in QR code scanner (iOS 11, Pixel 2, Samsung S8, etc.), we also have our own blazing fast continous QR scanner. With our app's QR Scanner, you can scan routes you did to be ticked and saved to your account. Check out your account's dashboard to check your stats and saved climbs.
+                            <p> While your modern phone probably has a built-in QR code scanner (iOS 11, Pixel 2, Samsung S8, etc.), we also have our own blazing fast continous QR scanner. With our app's QR Scanner, you can scan routes you did to be ticked and saved to your account. Check out your account's dashboard to see your stats with charts and graphs and a searchable list of saved climbs thereafter.
                             </p>
                         </div>
                         <img src="images/gallery/4.jpg" alt="graphic" class="img-fluid rounded align-self-start mr-lg-3 mb-5 mb-lg-0 col-md-4">
@@ -201,7 +201,7 @@
                         <div>
                             <h2>Technology</h2>
                             <p class="lead">Leveraging Cloud computing and storage for climbing </p>
-                            <p>The climb is no longer dead and gone when it is removed and replaced in the gym. You can refer back to it whenever because it persists in our database. Want to remember that gnarly V8 you did months ago? Now you can as a climber. What if you're a routesetter looking to set at a new place? You can use our api as a reference and portfolio to show off your best work too! What if you have no idea what to make next? Browse past climbs and get fun ideas for your route.
+                            <p>The climb is no longer dead and gone when it is removed and replaced in the gym. You can refer back to it any time because it persists in our database. Want to remember that gnarly V8 you did months ago? Now you can as a climber. What if you're a routesetter looking to set at a new place? You can use our api as a reference and your profile as a portfolio to show off your best work too! What if you have no idea what route to make next? Browse past climbs and get fun ideas!
                             </p>
 
                         </div>
@@ -212,12 +212,14 @@
                         <div>
 
                             <h2>Using Data to Your Advantage</h2>
-                            <p class="lead">The data we collect goes a long way towards to building better climbs and making happier members.</p>
-                            <p>Every climb has a star rating system from 1-5 and are graded by the climbers. You can see what climbers like, how well the routesetters are setting, and what kinds of climbs to set next using this information.
+                            <p class="lead">The data we collect goes a long way towards building better climbs and making happier climbers.</p>
+                            <p>Every climb has a star rating system from 1-5 and are graded by the climbers. We also collect data on what routes are being scanned for beta and which are being ticked. Now you can see what climbers like, what grade and styles are in demand, how well the routesetters are setting, and what kinds of climbs to set next using this information.
                             </p>
-                            <p> Additionally, get the demographics of both your climbers and climbs, and organize your routes and see the distribution of grades and types of climbs. All this so you can make better decisions in the interest of your climbers and business.
+                            <h6>Route Management</h6>
+                            <p> Additionally, get the demographics of both your climbers and climbs. Organize your routes to see the distribution of grades and types. The browsable database of climbs can be used by your climbers so they see what's new before heading to the gym. All this so you can make better decisions in the interest of your climbers and business.
                             </p>
-                            <p> Do you do member climbing competitions? If you do, you can ditch the scorecards and forget about getting volunteers to tally up points. Climbers can use the tick feature of our app to tally points in realtime for maximum competitiveness. Just create a new climb under competition mode.
+                            <h6>Competitions</h6>
+                            <p> Do you do climbing competitions? If you do, you can ditch the scorecards and forget about getting volunteers to tally up points. Climbers can use the tick feature of our app to tally points in realtime for maximum competitiveness. Just create a new climb under competition mode.
                             </p>
                             <img src="images/dashboard.png" alt="graphic" class="img-fluid mt-2">
                         </div>
@@ -278,7 +280,7 @@
                             <div class="circle-icon mr-4">3</div>
                             <div class="media-body">
                                 <h5>Add Beta Videos or Annotations</h5>
-                                <p>Record beta to help your frustrated climbers. Too much? There's also the option to annotate a climb too. Give hints for your climb's cruxes using this tool. Still too much? Let the staff or community do this part. However, we think it's better to get the beta straight from the mastermind that came up with the climb.</p>
+                                <p>Record beta to help your frustrated climbers. Too much? There's also the option to annotate a climb too. Give hints for your climb's cruxes using this tool. Still too much? Let the staff or community do this part. However, we think it's better to get the beta straight from the mastermind that came up with the climb. Too often do we hear "I don't know what that hold is for."</p>
                             </div>
                         </li>
                     </ul>
