image background cover to git

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 offset-lg-6 animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.5s">
+                <div class="col-lg-6 offset-lg-6 animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
                     <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                     <h2>It's Not Just a Concept.</h2>
                     <p class="mb-4">We have a working app deployed. Use it to check into your climbing gym and start creating and ticking climbs!</p>
@@ -137,7 +137,7 @@
                 </div>
             </div>
             <div class="perspective-phone">
-                <img src="images/perspective.png" alt="perspective phone" class="img-fluid animated wow fadeIn" data-wow-duration="2.5s" data-wow-delay="0.6s">
+                <img src="images/perspective.png" alt="perspective phone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
             </div>
         </div>
 
@@ -238,14 +238,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="images/dualphone.png" alt="dual phone" class="img-fluid animated wow fadeIn" data-wow-duration="2.5s" data-wow-delay="0.6s">
+                    <img src="images/dualphone.png" alt="dual phone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
                 </div>
-                <div class="col-md-6 d-flex align-items-center animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.5s">
+                <div class="col-md-6 d-flex align-items-center animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
                         <h2>Beta Videos Directly in the Climber's Hands</h2>
                         <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution to a climb you're stuck on. Watch it conveniently and seamlessly by scanning the βTag™. </p>
-                        <a href="https://touchstone.betabouldersapp.com/about" class="btn btn-primary">Read more</a></div>
+                        <p class="mb-4">Do you want to lose the database and just use the core feature of providing beta videos? Check out βSpray™. It has the core feature of βouldersApp™ in providing videos but through a reusable βTag™. Contact to ask for sample tags.</p>
+                        <a href="https://touchstone.betabouldersapp.com/about" class="btn btn-primary">Read more about βSpray™</a></div>
                 </div>
             </div>
 
@@ -260,7 +261,7 @@
         <div class="container">
             <h3>Adding a Climb is Easy, Simple, and Quick.</h3>
             <div class="row">
-                <div class="col-md-8 d-flex align-items-center animated wow fadeInLeft" data-wow-duration="1.7s" data-wow-delay="0.5s">
+                <div class="col-md-8 d-flex align-items-center animated wow fadeInLeft" data-wow-duration="1.7s" data-wow-delay="0.3s">
                     <ul class="list-unstyled ui-steps">
                         <li class="media">
                             <div class="circle-icon mr-4">1</div>
@@ -286,7 +287,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <img src="images/iphonex2.png" alt="iphone" class="img-fluid animated wow fadeIn" data-wow-duration="2.5s" data-wow-delay="0.6s">
+                    <img src="images/iphonex2.png" alt="iphone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
                 </div>
 
             </div>
