top rendering image

--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@
         </div>
     </div>
 
-
-    <header class="bg-top" id="home">
+<header class="bg-top" id="home" style="background:url(./images/top.png) no-repeat center center fixed;     
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: 50% 50%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;">
         <div class="img-holder mt-sm-5 pt-sm-5"><img src="images/iphonex.png" alt="phone" class="img-fluid pt-sm-5 animated fadeInUp wow" data-wow-duration="1s" data-wow-delay="0.1s"></div>
     </header>
 
@@ -400,7 +406,7 @@
                 <p class="tagline">Available for all major mobile and desktop platforms. This app can be added to your homepage for even quicker accessibility. </p>
                 <div class="my-4">
 
-                    <button class="btn btn-light"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-width: 120px"></button>
+                    <button class="btn btn-light bg-white"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-width: 120px"></button>
 
                 </div>
                 <p class="text-primary"><small><i>*Tested and working on all browsers including, Safari, Chrome, Firefox, and Edge. </i></small></p>
