--- a/index.html
+++ b/index.html
@@ -51,14 +51,7 @@
         </div>
     </div>
 
-<header class="bg-top" id="home" style="background:url(./images/top.png) no-repeat center center fixed;     
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: 50% 50%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;">
+<header class="bg-top" id="home" style="background:url(./images/top.png) no-repeat center center fixed; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;">
         <div class="img-holder mt-sm-5 pt-sm-5"><img src="images/iphonex.png" alt="phone" class="img-fluid pt-sm-5 animated fadeInUp wow" data-wow-duration="1s" data-wow-delay="0.1s"></div>
     </header>
 
