--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="section-title">
         <div class="container">
             <h1 class="animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.0s">Get (beta) Sprayed. 💦</h1>
-            <p class="tagline">The one and only app a rock climbing gym needs. Give climbers the beta to your bouldering routes and build a community along the way.</p>
+            <p class="tagline">The app every rock climbing gym needs. Give climbers the solution (beta) to your bouldering routes and build a community along the way.</p>
         </div>
 <!--                 <small>HIGHLIGHTS</small>
                 <h3>Features you love</h3> -->
@@ -110,7 +110,7 @@
                                 <span class="ti-user gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">Community</h4>
-                                    <p class="card-text">Join along with other members at your gym. Tick climbs you've done and track your progress with our visualization tools. See your friend's profile while you're at it. </p>
+                                    <p class="card-text">Join along with other members at your gym. Tick climbs you've done and track your progress with our visualization tools. See your friend's profile too! </p>
                                 </div>
                             </div>
                         </div>
@@ -172,11 +172,12 @@
                         <div>
                             <h2>The Power of the βTag™</h2>
                             <p class="lead">Organization is the problem and our tags are the solution. </p>
-                            <p>You can print the βTag™ directly from a climb's page so that you can physically attach it to your climb. Along with route information, it is marked with handy indicators for color, danger, and what's considered on the route.
+                            <p>You can print βTags™ directly from a climb's page or get a durable, reusable βTag™ from us that you can physically attach to your climb. Along with route information, it is marked with handy indicators for color, danger, and what's considered on the route.
                             </p>
 
-                            <p> If you find that completely replacing your tags may be too cumbersome, there's an option for a compact βTag™. The information on this tag can be customize to a gym's liking and can be printed with a label maker. We recommend using Brother's QL-810W so the label can be applied as a sticker.
+                            <p> If you find that completely replacing your tags may be too cumbersome, there's an option for a compact βTag™. The information on this tag can be customize to a gym's liking and can be printed with a label maker. We recommend using our portable label maker so labels can be made quickly and applied as stickers. This option is especially suited for member rock climbing competitions!
                             </p>
+
 
                         </div>
                     </div>
@@ -185,11 +186,12 @@
                     <div class="d-flex flex-column flex-md-row">
                         <div>
                             <h2>Scanning Initiated</h2>
-                            <p class="lead">Our system and app revolves around the idea of scanning to get lots of information. </p>
+                            <p class="lead">Our system and app revolves around the idea of scanning to get things done. </p>
                             <p>In case you haven't noticed, QR codes are finally becoming widespread. With phone cameras getting better and better, scanning a QR code is a walk in the park.
                             </p>
-                            <p> While your modern phone probably has a built-in QR code scanner (iOS 11, Pixel 2, Samsung S8, etc.), we also have our own blazing fast continous QR scanner. With our app's QR Scanner, you can scan routes you did to be ticked and saved to your account. Check out your account's dashboard to see your stats with charts and graphs and a searchable list of saved climbs thereafter.
+                            <p> While your modern phone probably has a built-in QR code scanner (iOS 11, Pixel 2, Samsung S8, etc.), we also have our own blazing fast continous QR scanner in app. With our app's QR Scanner, you can scan routes you did to be ticked and saved to your account. Check out your account's dashboard to see your stats with charts and graphs and a searchable list of saved climbs thereafter.
                             </p>
+                            <img src="./images/dashboardicon.png" style="width: 180px">
                         </div>
                         <img src="images/gallery/4.jpg" alt="graphic" class="img-fluid rounded align-self-start mr-lg-3 mb-5 mb-lg-0 col-md-4">
                     </div>
@@ -200,7 +202,7 @@
                         <div>
                             <h2>Technology</h2>
                             <p class="lead">Leveraging Cloud computing and storage for climbing </p>
-                            <p>The climb is no longer dead and gone when it is removed and replaced in the gym. You can refer back to it any time because it persists in our database. Want to remember that gnarly V8 you did months ago? Now you can as a climber. What if you're a routesetter looking to set at a new place? You can use our api as a reference and your profile as a portfolio to show off your best work too! What if you have no idea what route to make next? Browse past climbs and get fun ideas!
+                            <p>The climb is not gone when it is removed and replaced in the gym. You can now refer back to it any time because it persists in your database. Want to remember that gnarly V8 you did months ago? Now you can as a climber. What if you're a routesetter looking to set at a new place? You can use our api as a reference and your profile as a portfolio to show off your best work too! What if you have no idea what route to make next? Browse past climbs and get fun ideas!
                             </p>
 
                         </div>
@@ -214,13 +216,15 @@
                             <p class="lead">The data we collect goes a long way towards building better climbs and making happier climbers.</p>
                             <p>Every climb has a star rating system from 1-5 and are graded by the climbers. We also collect data on what routes are being scanned for beta and which are being ticked. Now you can see what climbers like, what grade and styles are in demand, how well the routesetters are setting, and what kinds of climbs to set next using this information.
                             </p>
+                            <img src="images/dashboard.png" alt="graphic" class="img-fluid mt-2 mb-5">
                             <h6>Route Management</h6>
-                            <p> Additionally, get the demographics of both your climbers and climbs. Organize your routes to see the distribution of grades and types. The browsable database of climbs can be used by your climbers so they see what's new before heading to the gym. All this so you can make better decisions in the interest of your climbers and business.
+                            <p> Additionally, get the demographics of both your climbers and climbs. Organize your routes to see the distribution of grades and types. The browsable database of climbs can be used by your climbers so they see what's new before heading to the gym. All this so you can make better business decisions in the interest of your climbers.
                             </p>
                             <h6>Competitions</h6>
-                            <p> Do you do climbing competitions? If you do, you can ditch the scorecards and forget about getting volunteers to tally up points. Climbers can use the tick feature of our app to tally points in realtime for maximum competitiveness. Just create a new climb under competition mode.
+                            <p> Do you do climbing competitions? If you do, you can ditch the scorecards and forget about gathering up volunteers to tally up points for a whole hour. Climbers can use the tick feature of our app to tally points in realtime for maximum competitiveness. They can see whos ahead before the competition is over and push themselves harder. Simply just create a new climb under competition mode!
                             </p>
-                            <img src="images/dashboard.png" alt="graphic" class="img-fluid mt-2">
+                            <img src="./images/comp.png" style="width: 180px">
+                            
                         </div>
                         
                     </div>
@@ -245,7 +249,7 @@
                         <h2>Beta Videos Directly in the Climber's Hands</h2>
                         <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution to a climb you're stuck on. Watch it conveniently and seamlessly by scanning the βTag™. </p>
                         <p class="mb-4">Do you want to lose the database and just use the core feature of providing beta videos? Check out βSpray™. It has the core feature of βouldersApp™ in providing videos but through a reusable βTag™. Contact to ask for sample tags.</p>
-                        <a href="https://touchstone.betabouldersapp.com/about" class="btn btn-primary">Read more about βSpray™</a></div>
+                        <a href="https://spray.betabouldersapp.com/"><img src="./images/spray.png" class="img-fluid" style="height:180px"></a></div>
                 </div>
             </div>
 
@@ -379,7 +383,7 @@
                     <h4 class="mb-3">Do I have to download anything?</h4>
                     <p class="light-font mb-5">BetaBoulders App is all web. You can access it on your browser (phone or desktop) and use all the features, so there's no download needed. You can also choose to save it to your homepage as our app is a Progressive Web Application. By doing so, it will be treated and act like an app you downloaded. </p>
                     <h4 class="mb-3">Isn't this considered cheating? Doesn't this ruin the fun of climbing?</h4>
-                    <p class="light-font mb-5">We don't know what's fun about being stuck and frustrated on a climb. We also don't think people should kill themselves over a climb with constant attempts. Of course, we built this tool so that it could be used as a last resort or for the curious climber. At the core, we want climbers to get better by seeing great technique straight from the route setter. It's good to copy as practice!</p>
+                    <p class="light-font mb-5"> At the core, we want climbers to get better by seeing great technique straight from the route setter. We believe that it's good practice if you're able to mimic another person, especially on a route you couldn't otherwise have done on your own. As a climber, try to use it as your last resort!</p>
 
                 </div>
             </div>
@@ -396,7 +400,7 @@
 
                 <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                 <h2>Accessible Anywhere</h2>
-                <p class="tagline">Available for all major mobile and desktop platforms. This app can be added to your homepage for even quicker accessibility. </p>
+                <p class="tagline">Available for all major mobile and desktop platforms. This app can be added to your homepage for even quicker accessibility. Coming in the future as an app for Google Play and Apple App Store.</p>
                 <div class="my-4">
 
                     <button class="btn btn-light bg-white"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-width: 120px"></button>
@@ -416,7 +420,7 @@
                     <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Los Angeles, CA</p>
                     <div class=" d-block d-sm-inline-block">
                         <p class="mb-2">
-                            <span class="ti-email mr-2"></span> <a class="mr-4" href="mailto:davidlac.web@gmail.com">info@betabouldersapp.com</a>
+                            <span class="ti-email mr-2"></span> <a class="mr-4" href="info@betabouldersapp.com">info@betabouldersapp.com</a>
                         </p>
                     </div>
                     <div class="d-block d-sm-inline-block">
