same button size

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                    
                     <button class="btn btn-light bg-white"><img src="./images/apple.png" alt="icon" class="img-fluid" style="max-height: 120px"></button>
                     <button class="btn btn-light bg-white"><img src="./images/play.png" alt="icon" class="img-fluid" style="max-height: 120px"></button>
-                     <button class="btn btn-light bg-white"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-width: 120px"></button>
+                     <button class="btn btn-light bg-white"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-height: 120px;" ></button>
 
                 </div>
                 <p class="text-primary"><small><i>*Tested and working on all browsers including, Safari, Chrome, Firefox, and Edge. </i></small></p>
