--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                 <div class="col-lg-6">
            <!-- <div class="col-lg-6 col-md-12"> -->
             <div class="form">
-              <form method="POST" action="https://formspree.io/betabouldersappa@gmail.com" class="contactform">
+              <form method="POST" action="https://formspree.io/betabouldersapp@gmail.com" class="contactform">
                 <div class="form-row">
                   <div class="form-group col-lg-6">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
